1.3.0
    - OMG assigned vendorId 0x0121
    - Changes to quality of service is tracked and sent to remote entities 
      with SEDP.
    - typeName is stored in Entity, EntityFactory gets typeName parameter 
      in create methods
    - Simple content filter support. Readers can do reader side filtering and
      optionally inform writers of the filter setup, but CONTENT_FILTER_INFO 
      parameters are not handled.

1.2.1
	- FIX: shared secret was not used :|
	- Config: udds.security.no-op.shared-secret This configuration is used 
	  if authentication is set to none, and rtps-protection is set to 
	  something other than none.
	  
1.2
    - Guid is created by AuthenticationPlugin. 
    - Renamed KeystoreAuthenticationPlugin to JKSAuthenticationPlugin
    - Security: Securing content with Transformers; MacTransformer, 
      CipherTransformer, CompositeTransformer

1.1
    - security: authentication & shared secret exchange
    
1.0.1
    - FIX: NPE when explicitly registering an instance. This does not affect 
      uDDS, as relevant API call is not public and not used by uDDS.
     
1.0
    - OWNERSHIP, OWNERSHIP_STRENGTH
    - Config: udds.sedp-delay 
    - FIX: BuiltinParticipantDataListener is registered after built-in 
      entities have been created. This fixes some timing issues on startup.
    - FIX: creating an entity returns an existing entity if it has been 
      created before with the same entityId.    
      
0.9.13
    - TIME_BASE_FILTER, LIFESPAN
    
0.9.12
    - DataRepresentation & TypeConsistencyEnforcement QoS policies as Parameters on wire. 
      For DataRepresentation, only XCDR_DATA_REPRESENTATION kind is supported.
    - BaseTypeName & EquivalentTypeName parameters on wire are recognized
    - ResourceLimits: max_samples_per_instance
      
0.9.11
    - FIX: During discovery, DataWriterPolicys and DataReaderPolicys are
      passed to remote entity instead of InlineQoS policies.